--- a/Introduction/css/mystyle.css
+++ b/Introduction/css/mystyle.css
@@ -1,8 +1,8 @@
 body {
-  background-color: lightblue;
+  background-color: rgb(164, 126, 60);
 }
 
 h1 {
-  color: navy;
+  color: rgb(54, 42, 4);
   margin-left: 20px;
 }
