--- a/Introduction/css/mystyle.css
+++ b/Introduction/css/mystyle.css
@@ -1,8 +1,17 @@
 body {
-  background-color: rgb(164, 126, 60);
+  background-color: rgb(0, 66, 37);
+  text-align: center;
 }
 
 h1 {
-  color: rgb(54, 42, 4);
+  color: rgb(0, 66, 37);
   margin-left: 20px;
+}
+
+p {
+  text-align: center;
+}
+
+img {
+  text-align: center;
 }
