--- a/Introduction/css/mystyle.css
+++ b/Introduction/css/mystyle.css
@@ -1,17 +1,7 @@
 body {
-  background-color: rgb(0, 66, 37);
-  text-align: center;
+  background-color: lightblue;
 }
-
 h1 {
-  color: rgb(0, 66, 37);
+  color: navy;
   margin-left: 20px;
-}
-
-p {
-  text-align: center;
-}
-
-img {
-  text-align: center;
 }
