--- a/Introduction/css/flexbox.css
+++ b/Introduction/css/flexbox.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  background-color: LightBlue;
+  background-color: rgb(78, 51, 0);
 }
  
 .container div {
@@ -12,3 +12,4 @@
   text-align: center;  
   font-size: 30px;
 }
+
