--- a/Introduction/css/flexbox.css
+++ b/Introduction/css/flexbox.css
@@ -6,10 +6,11 @@
  
 .container div {
   background-color: #f1f1f1;
-  width: 100px;
-  margin: 10px;
+  font-style: normal;
+  width: 300px;
+  margin: 200px;
   padding: 10px;
   text-align: center;  
-  font-size: 30px;
+  font-size: 25px;
 }
 
