--- a/Introduction/css/flexbox.css
+++ b/Introduction/css/flexbox.css
@@ -14,7 +14,7 @@ body {
 }
 
 .section {
-  background-color: #987555; 
+  background-color: #d1b48c; 
   margin: 20px;
   padding: 20px;
   border-radius: 8px;
@@ -22,7 +22,7 @@ body {
 }
 
 .section h2 {
-  color: #1d0f0e; 
+  color: #; 
   font-size: 25px;
 }
 
