--- a/Introduction/css/css-grid.css
+++ b/Introduction/css/css-grid.css
@@ -1,10 +1,43 @@
 body {
-  background-color: rgb(164, 126, 60);
+  font-family: "Times New Roman", Times, serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f1e7d3; 
+  font-size: 25px;
 }
 
-h1 {
-  color: rgb(54, 42, 4);
-  margin-left: 20px;
+.header {
+  background-color: #1d0f0e; 
+  padding: 20px;
+  text-align: center;
+  color: #c8af86;
+}
+
+.section {
+  background-color: #d1b48c; 
+  margin: 20px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
+}
+
+.section h2 {
+  color: #1e100d; 
+  font-size: 30px;
+}
+
+.section ul li {
+  margin-bottom: 6px;
+}
+
+.hero {
+  text-align: center;
+}
+
+.hero img {
+  border-radius: 10px;
+  margin-bottom: 15px;
+  max-width: 90%;
 }
 
 .container {
