--- a/Introduction/css/css-grid.css
+++ b/Introduction/css/css-grid.css
@@ -43,13 +43,13 @@ body {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  background-color: dodgerblue;
+  background-color: #281f14;
   padding: 5px;
   gap: 5px;
 }
 .container div {
-  background-color: #f1f1f1;
-  color: #000;
+  background-color: #c6c6c5;
+  color: #1e100d;
   padding: 10px;
   font-size: 30px;
   text-align: center;
