--- a/Introduction/css/css-grid.css
+++ b/Introduction/css/css-grid.css
@@ -1,56 +1,45 @@
-body {
-  font-family: "Times New Roman", Times, serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f1e7d3; 
-  font-size: 25px;
-}
-
-.header {
-  background-color: #1d0f0e; 
-  padding: 20px;
-  text-align: center;
-  color: #c8af86;
-}
-
-.section {
-  background-color: #d1b48c; 
-  margin: 20px;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
-}
-
-.section h2 {
-  color: #1e100d; 
-  font-size: 30px;
-}
-
-.section ul li {
-  margin-bottom: 6px;
-}
-
-.hero {
-  text-align: center;
-}
-
-.hero img {
-  border-radius: 10px;
-  margin-bottom: 15px;
-  max-width: 90%;
-}
-
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr 1fr;
+  gap: 5px;
   background-color: #281f14;
   padding: 5px;
-  gap: 5px;
 }
+
 .container div {
   background-color: #c6c6c5;
   color: #1e100d;
   padding: 10px;
   font-size: 30px;
   text-align: center;
+}
+
+.container div:nth-child(1) {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.container div:nth-child(2) {
+  grid-column: 2 / 4;
+  grid-row: 1 / 2;
+}
+
+.container div:nth-child(3) {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+}
+
+.container div:nth-child(4) {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+.container div:nth-child(5) {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.container div:nth-child(6) {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
 }
