--- a/Introduction/css/rwd.css
+++ b/Introduction/css/rwd.css
@@ -1,104 +1,70 @@
 * {
   box-sizing: border-box;
 }
- 
+
 body {
-  font-family: "Lucida Sans", sans-serif;
-  font-size: 17px;
-}
- 
-.grid-container {
-  display: grid;
-  grid-template-areas:
-    'header'
-    'menu'
-    'main'
-    'facts'
-    'footer';
-  background-color: white;
-  gap: 10px;  
-}
- 
-.header {
-  grid-area: header;
-  background-color: purple;
-  text-align: center;
-  color: #ffffff;
-}
- 
-.header > h1 {
-  font-size: 40px;
-}
- 
-.menu {
-  grid-area: menu;
-  }
- 
-.menu ul {
-  list-style-type: none;
+  font-family: "Times New Roman", Times, serif;
   margin: 0;
-  padding: 0;
-}
- 
-.menu li {
-  padding: 8px;
-  margin-bottom: 7px;
-  background-color: #33b5e5;
-  color: #ffffff;
-}
- 
-.menu li:hover {
-  background-color: #0099cc;
-}
- 
-.content {
-  grid-area: main;
-}
- 
-.content > h1 {
-  font-size: 30px;
-  margin-bottom: 7px;
-}
- 
-.content > p {
-  margin-bottom: 7px;
-}
- 
-.facts {
-  grid-area: facts;
-  border: 1px solid #0099cc;
-  background-color: beige;
-  padding: 10px;
-}
- 
-.facts > h2 {
+  background-color: #f1e7d3;
   font-size: 20px;
 }
- 
-.facts li {
-  margin-bottom: 5px;
-}
- 
-.footer {
-  grid-area: footer;
-  background-color: #0099cc;
-  color: #ffffff;
+
+.header {
+  background-color: #1d0f0e;
+  color: #c8af86;
   text-align: center;
+  padding: 20px;
 }
- 
-@media (min-width: 600px) {
-  .header {grid-area: 1 / span 6;}
-  .menu {grid-area: 2 / span 1;}
-  .content {grid-area: 2 / span 4;}
-  .facts {grid-area: 3 / span 6;}
-  .footer {grid-area: 4 / span 6;}
+
+.header h1 {
+  font-size: 35px;
+  margin: 0;
 }
- 
-@media (min-width: 768px) {
-  .header {grid-area: 1 / span 6;}
-  .menu {grid-area: 2 / span 1;}
-  .content {grid-area: 2 / span 4;}
-  .facts {grid-area: 2 / span 1;}
-  .footer {grid-area: 3 / span 6;}
+
+.grid-container {
+  display: grid;
+  gap: 15px;
+  padding: 15px;
+  grid-template-areas:
+    "about"
+    "edu"
+    "course"
+    "exp"
+    "hobbies"
+    "goals";
 }
- 
+
+.item {
+  background-color: #d1b48c;
+  padding: 20px;
+  border-radius: 8px;
+  color: #1e100d;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+
+.about { grid-area: about; }
+.edu { grid-area: edu; }
+.course { grid-area: course; }
+.exp { grid-area: exp; }
+.hobbies { grid-area: hobbies; }
+.goals { grid-area: goals; }
+
+.item h2 {
+  margin-top: 0;
+  font-size: 28px;
+}
+
+/* Large screens (same pattern as your 1st CSS layout) */
+@media (min-width: 900px) {
+  .grid-container {
+    grid-template-areas:
+      "about edu edu"
+      "about course course"
+      "exp hobbies goals";
+    grid-template-columns: 2fr 1fr 1fr;
+  }
+
+  .item {
+    font-size: 22px;
+  }
+}
